@@ -1,8 +1,8 @@
-﻿<?xml version="1.0" encoding="utf8" standalone="yes"?>
+﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <strings>
 	<!-- Labels -->
 	<string id="30001">Finisat:</string>
-	<string id="30002">Mărime:</string>
+	<string id="30002">Volum:</string>
 	<string id="30003">D:</string>
 	<string id="30004">Î:</string>
 	<string id="30005">ETA:</string>
@@ -20,15 +20,15 @@
 	<string id="32003">Reluare</string>
 	<string id="32007">Șterge torent</string>
 	<string id="32008">Sterge torent și date</string>
-	<string id="32019">Setează eticheta</string>
+	<string id="32019">Setează etichetă</string>
 	<!-- dialog.select.label -->
-	<string id="32020">Selecteaza eticheta:</string>
+	<string id="32020">Selectează etichetă:</string>
 	<!-- dialog.numeric -->
 	<string id="32009">Viteză maximă de încărcare:</string>
 	<string id="32010">Viteză maximă de descărcare:</string>
 	<!-- context.menu -->
-	<string id="32011">Pauzeazăle pe toate</string>
-	<string id="32012">Reiale pe toate</string>
+	<string id="32011">Pauză Toate</string>
+	<string id="32012">Reia Toate</string>
 	<!-- error -->
 	<string id="32100">Eroare!</string>
 	<string id="32101">Nu s-a reușit să se conecteze la serviciu.</string>
